Fix watch task & about/symbolism whitespace

--- a/app/styles/pages/_flag.scss
+++ b/app/styles/pages/_flag.scss
@@ -9,6 +9,8 @@
         p {
             font-family: Open Sans;
             font-size: 16px;
+            white-space: pre-line;
+            margin: 0;
         }
     }
 }
